--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.rei.search.keywordexpander</groupId>
-  <artifactId>com-rei-search-keywordexpander</artifactId>
+  <groupId>keywordexpander</groupId>
+  <artifactId>keywordexpander</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
@@ -54,7 +54,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>com.rei.search.keywordexpander.App</mainClass>
+              <mainClass>com.moorecowbelle.search.keywordexpander.App</mainClass>
             </manifest>
           </archive>
         </configuration>
